--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <form method="POST" action="/api/submit">
+    <form method="POST" action="functions/api/submit">
       <label for="name">Nome:</label>
       <input id="name" name="name" type="text" required>
  
